--- a/1/planteamiento.tex
+++ b/1/planteamiento.tex
@@ -1,61 +1,18 @@
 	\chapter{Planteamiento del Problema}
 	\section{Descripción de la Realidad Problemática}
 
-	Lima Metropolitana, con una población superior a los 10 millones de habitantes, enfrenta un grave problema de deterioro en sus pavimentos debido al tráfico vehicular intenso y las condiciones climáticas. La falta de un sistema de monitoreo eficiente ha resultado en un elevado costo de mantenimiento y en la proliferación de daños en las vías, como grietas y baches. Estos deterioros, no gestionados de manera adecuada, afectan la movilidad, la seguridad vial y la calidad de vida de los ciudadanos. A pesar de los esfuerzos del Ministerio de Transportes y Comunicaciones (MTC) para destinar fondos al mantenimiento, las intervenciones no son suficientes ni oportunas.  \parencite{ws_oms2022cancert}
-
-	A continuación, se presentan la Figura \ref{1:fig} y la Figura \ref{1:fig2} que muestran los distintos índices de incidencia y mortalidad de cáncer de tiroides en mujeres, donde se puede resaltar la presencia de Perú en los rangos más altos de cada uno de estos. 
-	\begin{comment}
+	Lima Metropolitana, con una población superior a los 10 millones de habitantes, enfrenta un grave problema de deterioro en sus pavimentos debido al tráfico vehicular intenso y las condiciones climáticas. La falta de un sistema de monitoreo eficiente ha resultado en un elevado costo de mantenimiento y en la proliferación de daños en las vías, como grietas y baches. Estos deterioros, no gestionados de manera adecuada, afectan la movilidad, la seguridad vial y la calidad de vida de los ciudadanos. A pesar de los esfuerzos del Ministerio de Transportes y Comunicaciones (MTC) para destinar fondos al mantenimiento, las intervenciones no son suficientes ni oportunas.  \parencite{cielo2022gestion}
 	\begin{figure}[H]
 		\begin{center}
-			\includegraphics[width=1.00 \textwidth]{1/figures/tb_inc_ct_mujeres.png}
-			\caption[Tasa bruta de incidencia de cáncer de tiroides en mujeres por 100 000 personas]{Tasa bruta de incidencia de cáncer de tiroides en mujeres por 100 000 personas. \\
-			Fuente: \cite{ws_oms2022cancert}. \textit{Cancer Today}.}
-			\label{1:fig}
+			\includegraphics[width=0.75\textwidth]{2/figures/sistemavial.png}
+			\caption[Sistema vial de Lima Metropolitana.]{Sistema vial de Lima Metropolitana. \\
+			Fuente: \cite{mivivienda2021movilidad}. \textit{Visión estratégica movilidad urbana PLAN MET Lima al 2040}.}
+			\label{2:fig207-2}
 		\end{center}
 	\end{figure}
 
-
-	\begin{figure}[H]
-		\begin{center}
-			\includegraphics[width=1.00 \textwidth]{1/figures/tb_mor_ct_mujeres.png}
-			\caption[Tasa bruta de mortalidad de cáncer de tiroides en mujeres por 100 000 personas]{Tasa bruta de mortalidad de cáncer de tiroides en mujeres por 100 000 personas. \\
-			Fuente: \cite{ws_oms2022cancert}. \textit{Cancer Today}.}
-			\label{1:fig2}
-		\end{center}
-	\end{figure}
-
-	De igual forma, en el caso de los varones, el Perú también se encuentra entre los rangos más altos de incidencia y mortalidad. A continuación, se muestran estos datos en la Figura \ref{1:fig3} y Figura \ref{1:fig4}.
-
-	\begin{figure}[H]
-		\begin{center}
-			\includegraphics[width=1.00 \textwidth]{1/figures/tb_inc_ct_varones.png}
-			\caption[Tasa bruta de incidencia de cáncer de tiroides en varones por 100 000 personas]{Tasa bruta de incidencia de cáncer de tiroides en varones por 100 000 personas. \\
-			Fuente: \cite{ws_oms2022cancert}. \textit{Cancer Today}.}
-			\label{1:fig3}
-		\end{center}
-	\end{figure}
-
-	\begin{figure}[H]
-		\begin{center}
-			\includegraphics[width=1.00 \textwidth]{1/figures/tb_mor_ct_varones.png}
-			\caption[Tasa bruta de mortalidad de cáncer de tiroides en varones por 100 000 personas]{Tasa bruta de mortalidad de cáncer de tiroides en varones por 100 000 personas. \\
-			Fuente: \cite{ws_oms2022cancert}. \textit{Cancer Today}.}
-			\label{1:fig4}
-		\end{center}
-	\end{figure}
-
-	Con la Figura \ref{1:fig5} que muestra los mismos índices distribuidos por género y regiones del mundo, es fácil notar la alta incidencia de este tipo de cáncer en las mujeres, siendo la región con mayor incidencia América del Norte, mientras que la de mayor mortalidad es Oceanía. La región de Latino América y el Caribe supera a Norte América en mortalidad, aunque se encuentra por debajo de Oceanía y Europa.
-
-	\begin{figure}[H]
-		\begin{center}
-			\includegraphics[width=0.60 \textwidth]{1/figures/tb_inc_mor_gen_y_reg.png}
-			\caption[Tasa bruta de incidencia y mortalidad de cáncer de tiroides por género y región]{Tasa bruta de incidencia y mortalidad de cáncer de tiroides por género y región. \\
-			Fuente: \cite{ws_oms2022cancert}. \textit{Cancer Today}.}
-			\label{1:fig5}
-		\end{center}
-	\end{figure}
-	\end{comment}
-	El avance de la inteligencia artificial (IA) y la visión por computadora ofrecen la posibilidad de desarrollar sistemas de monitoreo automatizados que puedan detectar daños en tiempo real, optimizando el mantenimiento de las carreteras y disminuyendo los costos asociados a la rehabilitación vial.\parencite{pr_haugen2016amethy}.
+	
+	El avance de la inteligencia artificial (IA) y la visión por computadora ofrecen la posibilidad de desarrollar sistemas de monitoreo automatizados que puedan detectar daños en tiempo real, optimizando el mantenimiento de las carreteras y disminuyendo los costos asociados a la rehabilitación vial.\parencite{9378047}.
 
 	%Para la detección temprana de este tipo de cáncer o desarrollo de tumores, depende en gran medida de la experiencia y la capacidad cognitiva de un experto en radiología, y muchos de estos se ven en la necesidad de utilizar no muy avanzados sistemas de pre-diagnóstico por computadora, mejor conocido como CAD por sus siglas en inglés \parencite{pr_zhu2021agendlframew}. Ante grandes limitaciones de sistemas CAD básicos, y aprovechando el extenso uso de la Inteligencia Artificial, el Deep Learning y sus algoritmos son capaces de incorporar mayor eficacia a dichos sistemas.
 
@@ -120,27 +77,6 @@
 		\item OE3: {\Objthree}
 		\item OE4: {\Objfour}
 	\end{itemize}
-
-	\section{Hipótesis}
-	
-	\subsection{Hipótesis General}
-	La implementación de un modelo automatizado de clasificación de deterioros en pavimentos, basado en redes neuronales convolucionales, mejorará la detección y el mantenimiento de las vías en Lima Metropolitana, reduciendo costos y aumentando la seguridad vial.
-	\subsection{Hipótesis Específicos}
-
-	\newcommand{\Hione}{
-	El uso de redes neuronales convolucionales permitirá una clasificación más precisa del estado de los pavimentos respecto a métodos tradicionales.}
-	\newcommand{\Hitwo}{
-	La detección automatizada y en tiempo real reducirá el tiempo de respuesta para las reparaciones, minimizando los costos a largo plazo.}
-	\newcommand{\Hithree}{
-	La priorización de las zonas más deterioradas mejorará la eficiencia en la asignación de recursos.}
-	
-
-	\begin{itemize}
-		\item H1: {\Hione}
-		\item H2: {\Hitwo}
-		\item H3: {\Hithree}
-	\end{itemize}
-
 
 	\section{Justificación de la Investigación}
 
