--- a/2/1_antecedentes/antecedentes.tex
+++ b/2/1_antecedentes/antecedentes.tex
@@ -1,5 +1,7 @@
-En esta parte de la investigación se presentan algunos antecedentes relacionados a la detección y pre-diagnóstico de nódulos en distintos órganos y a través de diversas metodologías. Estos ayudarán a entender el enfoque y obtener bases para un correcto desarrollo del proyecto en cuestión.
 
+En esta parte de la investigación se presentan algunos antecedentes relevantes relacionados con la detección de deterioros en pavimentos mediante el uso de redes neuronales convolucionales. 
+
+La identificación automática de daños en pavimentos es un área de estudio que ha ganado considerable interés en los últimos años debido a su potencial para optimizar el mantenimiento vial y mejorar la seguridad en las carreteras. Diversos trabajos han explorado el uso de tecnologías avanzadas, desde drones para la captura de datos hasta algoritmos de aprendizaje profundo para el análisis de imágenes, con el objetivo de detectar y clasificar distintos tipos de deterioros de manera eficiente.
 \begin{comment}
 
 
@@ -1032,6 +1034,14 @@ Los resultados del entrenamiento se presentan en la Tabla \ref{2:table29}.
 Los resultados muestran la superioridad de la estrategia de aprendizaje con ACL en comparación con las otras estrategias de aprendizaje, superando en las métricas de Accuracy, F1-score y AUC a los demás modelos.
 
 \end{comment}
+
+
+En el trabajo realizado por \citet{arrascue2021viabilidad}, se estudió la viabilidad del uso de drones para la detección de fallas y deterioros en caminos mineros de acarreo de mineral y material. Este estudio, llevado a cabo en la Pontificia Universidad Católica del Perú, destaca cómo la implementación de tecnologías avanzadas, como los drones, puede reducir costos y mejorar la precisión en la identificación de problemas críticos en entornos de alta exigencia operativa. La investigación concluye que los métodos no invasivos y automatizados son herramientas esenciales para una gestión eficiente de infraestructura minera, aportando importantes beneficios en términos de seguridad y optimización de recursos.
+
+Por otro lado, \citet{9378047} presenta un enfoque basado en \textit{Deep Learning} para la clasificación automática de deterioros en pavimentos. Utilizando redes neuronales convolucionales avanzadas como YOLO, CenterNet y EfficientDet, los autores lograron identificar distintos tipos de fallas, tales como grietas longitudinales, transversales, en bloque y baches. Este trabajo demostró la eficacia de las tecnologías de visión artificial para procesar grandes volúmenes de datos e incrementar la precisión en la caracterización de daños, estableciendo un marco sólido para la automatización en el monitoreo de infraestructuras viales.
+
+
+
 
 \cite{bicbic2023automated} En este estudio, Jasmin Bicbic, Thomas Emmanuel Gabriel Macatangay y su equipo desarrollaron un sistema de detección automática de daños en pavimentos para Filipinas, empleando el modelo YOLOv5n6 junto con un dispositivo Jetson Nano. Este enfoque permite la detección en tiempo real de daños como grietas, fisuras de cocodrilo y baches, eliminando la necesidad de inspecciones manuales en carreteras de alto tráfico y condiciones ambientales variables.
 
