--- a/anexos/anexo.tex
+++ b/anexos/anexo.tex
@@ -1,3 +1,6 @@
+
+\begin{comment}
+
 %\begin{appendices}
 
 \appendix
@@ -82,4 +85,4 @@
 		\end{longtable}
 	\end{landscape}
 	\clearpage
-	
+\end{comment}
