--- a/biblio/references.bib
+++ b/biblio/references.bib
@@ -137,16 +137,7 @@
 	doi = {10.1016/J.COMPBIOMED.2022.106172},
 }
 
-@article{pr_haugen2016amethy,
-	title = {2015 American Thyroid Association Management Guidelines for Adult Patients with Thyroid Nodules and Differentiated Thyroid Cancer: The American Thyroid Association Guidelines Task Force on Thyroid Nodules and Differentiated Thyroid Cancer},
-	author = {Haugen, B. R. and Alexander, E. K. and Bible, K. C. and Doherty, G. M. and Mandel, S. J. and Nikiforov, Y. E. and Pacini, F. and Randolph, G. W. and Sawka, A. M. and Schlumberger, M. and Schuff, K. G. and Sherman, S. I. and Sosa, J. A. and Steward, D. L. and Tuttle, R. M. and Wartofsky, L.},
-	journal = {Thyroid},	
-	volume={26},
-	number={1},
-	pages = {1-133},
-	year={2016},
-	doi = {10.1089/THY.2015.0020},
-}
+
 
 @inproceedings{pr_he2016deepres,
 	title = {Deep residual learning for image recognition},
@@ -360,12 +351,7 @@
 	url = {https://bookdown.org/f_izco/BDC-POC/metricas.html}
 }
 
-@misc{ws_oms2022cancert,
-	title = {Cancer Today},
-	author = {{Organización Mundial de la Salud}},
-	year = {2022},
-	url = {https://gco.iarc.who.int/today/en/dataviz/maps-heatmap?mode=population&key=crude_rate&types=0&age_start=0&cancers=32&sexes=2}
-}
+
 
 @misc{ws_inkawhich2024dcganpytorch,
 	author = {Inkawhich, Nathan},
@@ -512,3 +498,45 @@ DOI = {10.3390/app13095521}
       primaryClass={cs.CV},
       url={https://arxiv.org/abs/2402.02941}, 
 }
+
+
+@bachelorsthesis{cielo2022gestion,
+  title        = {Propuesta de un sistema de gestión vial para la preservación de pavimentos urbanos en Lima Metropolitana},
+  author       = {Cielo Jimenez, Alexander Jeanfranco and Sanchez Avendaño, Carmen Nicole},
+  year         = {2022},
+  school       = {Universidad Ricardo Palma},
+  address      = {Lima, Perú},
+  type         = {Tesis de título profesional},
+  url          = {https://repositorio.urp.edu.pe/handle/20.500.14138/7818},
+  note         = {Disponible bajo acceso abierto en el repositorio institucional.}
+}
+
+@misc{mivivienda2021movilidad,
+  title        = {Visión estratégica movilidad urbana PLAN MET Lima al 2040},
+  author       = {{Ministerio de Vivienda, Construcción y Saneamiento} and {Instituto Metropolitano de Planificación}},
+  year         = {2021},
+  url          = {https://www.imp.gob.pe/wp-content/uploads/2021/04/MOVILIDADURBANA.pdf},
+  note         = {Disponible en línea, consultado el 24 de noviembre de 2024}
+}
+
+@mastersthesis{arrascue2021viabilidad,
+  title        = {Viabilidad del uso de drones en la detección de fallas/deterioros en caminos mineros de acarreo de mineral/material},
+  author       = {Arrascue Fuentes, Carlos Alonso},
+  advisor      = {Galván Landavere, Rafael Jesús},
+  school       = {Pontificia Universidad Católica del Perú, Escuela de Posgrado},
+  year         = {2021},
+  month        = {May},
+  type         = {Trabajo de investigación para optar el grado académico de Magíster en Regulación, Gestión y Economía Minera},
+  address      = {Lima, Perú}
+}
+
+@INPROCEEDINGS{9378047,
+  author={Mandal, Vishal and Mussah, Abdul Rashid and Adu-Gyamfi, Yaw},
+  booktitle={2020 IEEE International Conference on Big Data (Big Data)}, 
+  title={Deep Learning Frameworks for Pavement Distress Classification: A Comparative Analysis}, 
+  year={2020},
+  volume={},
+  number={},
+  pages={5577-5583},
+  keywords={Deep learning;Roads;High performance computing;Training data;Predictive models;Big Data;Network architecture;deep convolutional neural networks;deep learning;pavement distress;road crack detection},
+  doi={10.1109/BigData50022.2020.9378047}}
