--- a/2/4_hipotesis/hipotesis.tex
+++ b/2/4_hipotesis/hipotesis.tex
@@ -1,27 +1,30 @@
 \subsection{Hipótesis General}
 HG: \newcommand{\HipotesisGeneral}{
-A través del diseño de un modelo de Deep Learning se pre-diagnóstica los nódulos tiroideos a través de imágenes de ultrasonido.
-}
+	La implementación de un modelo automatizado de clasificación de deterioros en pavi-
+	mentos, basado en redes neuronales convolucionales, mejoraría la detección y el mantenimiento
+	de las vías en Lima Metropolitana, reduciendo costos y aumentando la seguridad vial.}
 \HipotesisGeneral
 
 
 \subsection{Hipótesis Específicas}
 \newcommand{\Hone}{
-Las mejores características del conjunto de datos usadas para el proceso de entrenamiento y prueba permiten un mejor desarrollo del modelo de Deep Learning.
+El uso de redes neuronales convolucionales permitiría una clasificación más precisa del estado de los pavimentos respecto a métodos tradicionales.
 }
 \newcommand{\Htwo}{
-Las técnicas de preprocesamiento a aplicar a las imágenes de ultrasonido del conjunto de datos mejora el desempeño del modelo de Deep Learning.
+La detección automatizada y en tiempo real reduciría el tiempo de respuesta para las reparaciones, minimizando los costos a largo plazo.
 }
+
 \newcommand{\Hthree}{
-Las métricas de evaluación de rendimiento de los modelos de Deep Learning logra una correcta comparación de modelos en la tarea de clasificación de imágenes de ultrasonido.
+La priorización de las zonas mías deterioradas mejoraría la eficiencia en la asignación de recursos.
 }
 \newcommand{\Hfour}{
-Las arquitecturas de Deep Learning con más alto desempeño en la clasificación de imágenes de ultrasonido demuestran superioridad frente a los demás modelos.
+Las métricas de evaluación de rendimiento de los modelos de Deep Learning logra una correcta comparación de modelos en la tarea de clasificación de imágenes de ultrasonido.
 }
+
 
 \begin{itemize}
 	\item HE1: {\Hone}
 	\item HE2: {\Htwo}
 	\item HE3: {\Hthree}
-	\item HE4: {\Hfour}
+	
 \end{itemize}
